sort.basic.bubble.AlgBubbleSort1.scala.error
Compilation error:
AlgBubbleSort1:3: error: '=' expected but ';' found.
  var inutile;
             ^